create vue app on index file

--- a/Vue.practic/v-for-conditional/index.html
+++ b/Vue.practic/v-for-conditional/index.html
@@ -16,6 +16,13 @@
 
     </div>
     <script>
+        const App = {
+            data() {
+                return {
+
+                }
+            }
+        }
         Vue.createApp(App).mount('#app')
     </script>
 </body>
