--- a/Vue.practic/task1-conditional-rendaring/index.html
+++ b/Vue.practic/task1-conditional-rendaring/index.html
@@ -17,7 +17,7 @@
         <img v-if="seen" src="img/adnan.jpg" width="100" height="150" alt="">
         <p>
             <button class="btn btn-success" @click="show">show image</button>
-            <button class="btn btn-danger" v-if="seen" @click="hide">Hide</button>
+            <button class="btn btn-danger" v-if="seen" @click="hide"> X </button>
         </p>
     </div>
     <script>
@@ -34,6 +34,9 @@
                 },
                 hide() {
                     this.seen = false
+                },
+                close() {
+                    this.seen = true
                 }
 
             }
